[package]
name = "add_systemd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
serde = "1.0.151"
serde_derive = "1.0.151"
strum = { version = "0.24.1", features = ["strum_macros"] }
strum_macros = "0.24.3"
toml = "0.5.10"
